package fr.umontpellier.iut.dominion.cards.common;

import fr.umontpellier.iut.dominion.CardType;
import fr.umontpellier.iut.dominion.cards.Card;

/**
 * Carte Duché (Duchy)
 * <p>
 * 3 VP
 */
public class Duchy extends Card {
    public Duchy() {
        super("Duchy", 5, CardType.VICTORY);
    }

    @Override
    public int getVictoryValue() {
        return 3;
    }
}